# drone-inspection-cv-agent

./: CHANGELOG.md  Dockerfile  Makefile  README.md  RELEASE_CANDIDATE_MANIFEST.md  RELEASE_NOTES.md  docker-compose.yml  pyproject.toml
docs/: api.md  architecture.md  deployment.md  evaluation.md  interview_pitch.md  reproducibility.md  roadmap.md
examples/: expected_report.md  inspect_request.json
sample_data/: route_plan.json  sample_detections.json
scripts/: smoke_test.py
src/app/: agent.py  cli.py  detector.py  main.py
tests/: test_agent.py  test_api.py  test_container_config.py  test_smoke.py
